# lqr-quadcopter-test

./: .env.example  .gitignore  =0.1.0  =1.11.0  =7.4.0  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements-lock.txt
.github/af-config/: LICENSE_HEADER
.github/workflows/: af_maintenance.yml
docs/: architecture.md  environment.md  results.md  training.md
experiments/configs/: README.md  comparison_default.yaml  diagnostics_linear.yaml  eval_circular_baseline.yaml  eval_linear_baseline.yaml  eval_riccati_lqr_baseline.yaml  eval_stationary_baseline.yaml  training_default.yaml  training_fast.yaml  training_imitation.yaml  training_large.yaml  tuning_lqr.yaml  tuning_pid.yaml  tuning_pid_linear.yaml  tuning_riccati.yaml  tuning_riccati_linear.yaml
repo-analysis-output/: dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
reports/: imitation_metrics.csv
reports/checkpoints_imitation/: train_deep_20251130_185708_361699_42_best.pt  train_deep_20251130_185708_361699_42_epoch0009.pt  train_deep_20251130_185708_361699_42_epoch0019.pt  train_deep_20251130_185708_361699_42_final.pt
reports/logs_imitation/: train_deep_20251130_185708_361699_42_config.yaml  train_deep_20251130_185708_361699_42_log.csv  train_deep_20251130_185708_361699_42_log.json
reports/tuning/: tuning_riccati_lqr_20251201_183238_best_config.json  (+1 more)
scripts/: controller_autotune.py  generate_comparison_report.py
src/controllers/: __init__.py
tests/: __init__.py  test_config.py  test_env_dynamics.py  test_eval.py  test_training_loop.py  test_tuning.py
(+32 files in other folders)
