[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quadcopter-tracking"
version = "0.4.0"
description = "Research repository for quadcopter target-tracking studies using LQR and ML controllers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Agent Foundry" },
]
keywords = ["quadcopter", "control", "tracking", "simulation", "lqr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "torch>=2.0.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "cma>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "ruff>=0.1.0,<1.0.0",
]

# CLI entry point commented out until cli.py is implemented
# [project.scripts]
# run-experiment = "quadcopter_tracking.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quadcopter_tracking"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
